# tree-sitter-ink2

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
assets/: demo.ink
bindings/c/: tree-sitter-ink.pc.in
bindings/go/: binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ink/: __init__.py
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterInkTests/: TreeSitterInkTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: basics.txt  knot.txt  story_ld41_emoji.txt  story_the_intercept.txt
