[package]
name = "tree-sitter-ink"
description = "Ink by Inkle"
version = "0.1.0"
authors = ["Jean-Louis Fuchs <safe.pen2857@rhizoome.ch>"]
license = "MIT and Apache"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "ink"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/rhizoome/tree-sitter-ink"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.7"
