[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-ink"
description = "Ink by Inkle"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "ink"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Jean-Louis Fuchs", email = "safe.pen2857@rhizoome.ch" }]
requires-python = ">=3.9"
license.text = "MIT and Apache"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/rhizoome/tree-sitter-ink"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
